tests/invalid/use_missing_user_module.wio
use missing_gameplay as game;

fn Entry(args: string[]) -> i32 {
    return 0;
}
